Finalizado o desafio módulo 1 es6

--- a/curso-es6/package.json
+++ b/curso-es6/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-env": "^7.4.5"
   },
   "scripts": {
-    "dev": "babel ./main.js -o ./bundle.js -w"
+    "dev": "babel ./main.js -o ./bundle.js -w",
+    "desafio": "babel ./desafio.js -o ./bundle_desafio.js -w"
   }
 }
