--- a/curso-es6/package.json
+++ b/curso-es6/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.5"
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "scripts": {
-    "dev": "babel ./main.js -o ./bundle.js -w",
-    "desafio": "babel ./desafio.js -o ./bundle_desafio.js -w"
+    "dev": "webpack-dev-server --mode=development",
+    "desafio": "babel ./desafio.js -o ./bundle_desafio.js -w",
+    "build": "webpack --mode=production"
   }
 }
