--- a/curso-es6/package.json
+++ b/curso-es6/package.json
@@ -7,6 +7,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "webpack": "^4.35.2",
@@ -17,5 +18,8 @@
     "dev": "webpack-dev-server --mode=development",
     "desafio": "babel ./desafio.js -o ./bundle_desafio.js -w",
     "build": "webpack --mode=production"
+  },
+  "dependencies": {
+    "@babel/plugin-transform-async-to-generator": "^7.5.0"
   }
 }
